@@ -63,17 +63,11 @@ void communicate_receiving_file_system(void* p0, void* p1, void* p2, void* p3, v
     void* ec = *NULL_POINTER_MEMORY_MODEL;
     void* es = *NULL_POINTER_MEMORY_MODEL;
 
-fwprintf(stdout, L"TEST receive 0: %i\n", e);
-
     // Allocate encoded character array.
     allocate_model((void*) &e, (void*) &ec, (void*) &es, (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) MEMORY_ABSTRACTION_COUNT);
 
-fwprintf(stdout, L"TEST receive 1: %i\n", e);
-
     // Write file into encoded character array.
     receive_data((void*) &e, ec, es, p6, p7, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) FILE_CYBOL_CHANNEL, (void*) FILE_CYBOL_CHANNEL_COUNT);
-
-fwprintf(stdout, L"TEST receive 2: %i\n", e);
 
     // The serialised wide character array.
     void* s = *NULL_POINTER_MEMORY_MODEL;
@@ -83,17 +77,14 @@ fwprintf(stdout, L"TEST receive 2: %i\n", e);
     // Allocate serialised wide character array.
     allocate_model((void*) &s, (void*) &sc, (void*) &ss, (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) MEMORY_ABSTRACTION_COUNT);
 
-fwprintf(stdout, L"TEST receive 3: %i\n", s);
-
     // Decode encoded character array into serialised wide character array.
     decode_utf_8_unicode_character_vector((void*) &s, sc, ss, e, (void*) ec);
-
-fwprintf(stdout, L"TEST receive 4: %i\n", s);
 
     // Deallocate encoded character array.
     deallocate_model((void*) &e, (void*) &ec, (void*) &es, (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) MEMORY_ABSTRACTION_COUNT);
 
 fwprintf(stdout, L"TEST receive 5: %i\n", s);
+fwprintf(stdout, L"TEST receive 5: %ls\n", (wchar_t*) s);
 
     // Deserialise serialised wide character array into destination knowledge model.
     decode(p0, p1, p2, p3, p4, p5, s, sc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p8, p9);
