@@ -49,12 +49,7 @@ void deallocate_model(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5
 
     log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Deallocate model.");
 
-fwprintf(stdout, L"TEST model deallocator 0: %i\n", p0);
-
     deallocate(p0, p3, p4, p5);
-
-fwprintf(stdout, L"TEST model deallocator 1: %i\n", p0);
-
     deallocate(p1, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) INTEGER_MEMORY_ABSTRACTION, (void*) MEMORY_ABSTRACTION_COUNT);
     deallocate(p2, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) INTEGER_MEMORY_ABSTRACTION, (void*) MEMORY_ABSTRACTION_COUNT);
 }
